Recommendation for tab; use consistent wording for menuitemcheckbox, menuitemradio

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4464,7 +4464,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide any descendant content from assistive technologies.</li>
-                  <li>Use the element's contents as the accessible name if possible. Otherwise, use <code>aria-labelledby</code>.</li>
+                  <li>Ideally named by visible, descendant content.</li>
                   <li>See the <a href="#menu">Menu or Menu bar Design Pattern</a>.</li>
                 </ul>
               </td>
@@ -4475,7 +4475,7 @@ However, most authors do not need detailed understanding of the algorithms since
               <td>
                 <ul>
                   <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide any descendant content from assistive technologies.</li>
-                  <li>Use the element's contents as the accessible name if possible. Otherwise, use <code>aria-labelledby</code>.</li>
+                  <li>Ideally named by visible, descendant content.</li>
                   <li>See the <a href="#menu">Menu or Menu bar Design Pattern</a>.</li>
                 </ul>
               </td>
@@ -4615,7 +4615,12 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#tab" class="role-reference"><code>tab</code></a></td>
               <td>Required <strong>Only If</strong> Content Insufficient</td>
-              <td>To-do: similar to button</td>
+              <td>
+                <ul>
+                  <li>Warning! Using <code>aria-label</code> or <code>aria-labelledby</code> will hide descendant content from assistive technologies.</li>
+                  <li>Ideally named by visible, descendant content.</li>
+                </ul>
+              </td>
             </tr>
             <tr>
               <td><a href="#table" class="role-reference"><code>table</code></a></td>
