Link to issue 26 for role=math

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4450,7 +4450,7 @@ However, most authors do not need detailed understanding of the algorithms since
             <tr>
               <td><a href="#math" class="role-reference"><code>math</code></a></td>
               <td>Recommended</td>
-              <td>To-do: write guidance; probably similar to complementary</td>
+              <td>To-do: write guidance; probably similar to complementary. See issue <a href="https://github.com/w3c/aria-practices/issues/26">#26</a>.</td>
             </tr>
             <tr>
               <td><a href="#menu" class="role-reference"><code>menu</code></a></td>
